// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-card-horizontal should render 1`] = `
<ic-card-horizontal heading="Card" message="This is a static card">
  <template shadowrootmode="open">
    <div class="card medium">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a static card
          </ic-typography>
        </div>
      </div>
    </div>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render as a button 1`] = `
<ic-card-horizontal clickable="true" heading="Card" message="This is a clickable card rendered as a button">
  <template shadowrootmode="open">
    <button class="card clickable medium" tabindex="0">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a clickable card rendered as a button
          </ic-typography>
        </div>
      </div>
    </button>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render as a link 1`] = `
<ic-card-horizontal clickable="true" heading="Card" href="/" message="This is a clickable card rendered as a button">
  <template shadowrootmode="open">
    <a class="card clickable medium" href="/" hreflang="" tabindex="0">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a clickable card rendered as a button
          </ic-typography>
        </div>
      </div>
    </a>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render disabled 1`] = `
<ic-card-horizontal clickable="" disabled="" heading="Card" message="This is a static card">
  <template shadowrootmode="open">
    <button aria-disabled="true" class="card disabled medium" disabled="" tabindex="0">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a static card
          </ic-typography>
        </div>
      </div>
    </button>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render disabled: disabled-removed 1`] = `
<ic-card-horizontal clickable="" heading="Card" message="This is a static card">
  <template shadowrootmode="open">
    <button class="card clickable medium" tabindex="0">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a static card
          </ic-typography>
        </div>
      </div>
    </button>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render extra large 1`] = `
<ic-card-horizontal heading="Card" message="This is a static card" size="extra large">
  <template shadowrootmode="open">
    <div class="card extra large">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a static card
          </ic-typography>
        </div>
      </div>
    </div>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render large 1`] = `
<ic-card-horizontal heading="Card" message="This is a static card" size="large">
  <template shadowrootmode="open">
    <div class="card large">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a static card
          </ic-typography>
        </div>
      </div>
    </div>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render small 1`] = `
<ic-card-horizontal heading="Card" message="This is a static card" size="small">
  <template shadowrootmode="open">
    <div class="card small">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a static card
          </ic-typography>
        </div>
      </div>
    </div>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render with a link parent 1`] = `
<ic-card-horizontal clickable="true" heading="Card" message="This is a clickable card">
  <template shadowrootmode="open">
    <div class="card clickable medium">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a clickable card
          </ic-typography>
        </div>
      </div>
    </div>
  </template>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render with a slotted heading and message 1`] = `
<ic-card-horizontal id="test-card">
  <template shadowrootmode="open">
    <div class="card medium">
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography class="ic-typography-h4">
                <template shadowrootmode="open">
                  <slot></slot>
                </template>
                <p></p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <slot name="message"></slot>
        </div>
      </div>
    </div>
  </template>
  <ic-typography class="ic-typography-body" slot="heading">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Heading
  </ic-typography>
  <ic-typography class="ic-typography-body" slot="message">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Message
  </ic-typography>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render with an icon 1`] = `
<ic-card-horizontal heading="Card" id="test-card" message="This is a card">
  <template shadowrootmode="open">
    <div class="card medium with-icon">
      <div class="card-content">
        <div class="card-header">
          <div class="icon">
            <slot name="icon"></slot>
          </div>
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a card
          </ic-typography>
        </div>
      </div>
    </div>
  </template>
  <div slot="icon">
    Image placeholder
  </div>
</ic-card-horizontal>
`;

exports[`ic-card-horizontal should render with an image 1`] = `
<ic-card-horizontal heading="Card" id="test-card" message="This is a card">
  <template shadowrootmode="open">
    <div class="card medium with-image">
      <div class="image">
        <slot name="image"></slot>
      </div>
      <div class="card-content">
        <div class="card-header">
          <div class="card-title">
            <slot name="heading">
              <ic-typography variant="h4">
                <p>
                  Card
                </p>
              </ic-typography>
            </slot>
          </div>
        </div>
        <div class="card-message">
          <ic-typography variant="body">
            This is a card
          </ic-typography>
        </div>
      </div>
    </div>
  </template>
  <div slot="image">
    Image placeholder
  </div>
</ic-card-horizontal>
`;
